# globkey

./: .gitignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json
.github/workflows/: npm-publish.yml
keyfinder/: app.js
src/: lib.rs
